--- a/css/app2.css
+++ b/css/app2.css
@@ -189,7 +189,7 @@ body.disable-nav .dcc-nav, body.home .dcc-nav { right:-300px; opacity: 0}
 
 .dragon-building img { display: block;}
 
-.dcc-container { position: relative; overflow: hidden; -webkit-transition:transform cubic-bezier(0.465, 0.183, 0.153, 0.946) 2s; transition:transform cubic-bezier(0.465, 0.183, 0.153, 0.946) 2s;}
+.dcc-container { position: relative; overflow: hidden; -webkit-transition:transform ease 2s; transition:transform ease 2s;}
 .dcc-container.launched { -webkit-transition:transform cubic-bezier(.48,0,.8,.28) 8s; transition:transform cubic-bezier(.48,0,.8,.28) 8s;}
 
 .floor-separator { height:50px; background:url(../img/floor-separator.jpg) repeat left center}
