--- a/css/app2.css
+++ b/css/app2.css
@@ -452,5 +452,5 @@ a.btn-begin { width:120px; height:120px; display:inline-block;}
 @media only screen and (max-width:640px){
 	#dcc-lobby h2 { color:#fff; font-size:22px; margin:0 0 10px;}
 #dcc-lobby p { font-size:12px; color:#fff; margin:0 0 10px;}
-#dcc-lobby a {}
+.logo { top:10px; left:15px;}
 }
