--- a/css/app2.css
+++ b/css/app2.css
@@ -420,7 +420,7 @@ body.disable-nav .dcc-nav, body.home .dcc-nav { right:-300px; opacity: 0}
 #dcc-lobby a {}
 
 a.btn-begin { width:120px; height:120px; display:inline-block;}
-.btn-begin span { line-height: 34px; font-size:26px; word-spacing:100px; padding:30px 0; text-align: center; border-radius:1000px; background:url(../img/lobby-button.png) no-repeat center; text-transform: uppercase; color:#fff; letter-spacing: 2px; position: relative; width:120px; height:120px; display: block; z-index: 5;}
+.btn-begin span { line-height: 34px; font-size:22px; word-spacing:100px; padding:32px 0; text-align: center; border-radius:1000px; background:url(../img/lobby-button.png) no-repeat center; text-transform: uppercase; color:#fff; letter-spacing: 2px; position: relative; width:120px; height:120px; display: block; z-index: 5;}
 
 .rippling { position: relative; z-index: 4;}
 .rippling:before { display: block; content:""; width:100px; height:100px; top:50%; margin-top:-50px; left:50%; margin-left:-50px; position: absolute; z-index: 1; background:#fff; border-radius:1000px; -webkit-animation:in-momentum 1s infinite ease-in-out; animation:momentum 2s infinite ease;}
@@ -453,4 +453,5 @@ a.btn-begin { width:120px; height:120px; display:inline-block;}
 	#dcc-lobby h2 { color:#fff; font-size:22px; margin:0 0 10px;}
 #dcc-lobby p { font-size:12px; color:#fff; margin:0 0 10px;}
 .logo { top:10px; left:15px;}
+a.btn-begin { transform:scale(.8);}
 }
