--- a/css/app2.css
+++ b/css/app2.css
@@ -454,4 +454,5 @@ a.btn-begin { width:120px; height:120px; display:inline-block;}
 #dcc-lobby p { font-size:12px; color:#fff; margin:0 0 10px;}
 .logo { top:10px; left:15px;}
 a.btn-begin { transform:scale(.8);}
+.mascot-holder { transform:scale(.6); transform-origin:50% 100%;}
 }
