--- a/css/app2.css
+++ b/css/app2.css
@@ -449,10 +449,26 @@ a.btn-begin { width:120px; height:120px; display:inline-block;}
 
 .dcc-zeppelin { display: none;}
 
+@media only screen and (max-width:1366px){
+	.mascot-holder { transform:scale(.8); transform-origin:0% 100%;}
+}
 @media only screen and (max-width:640px){
 	#dcc-lobby h2 { color:#fff; font-size:22px; margin:0 0 10px;}
 #dcc-lobby p { font-size:12px; color:#fff; margin:0 0 10px;}
 .logo { top:10px; left:15px;}
 a.btn-begin { transform:scale(.8);}
 .mascot-holder { transform:scale(.6); transform-origin:0% 100%;}
+
+
+.popup-content { border:none width:100%; height:100%; padding:25px; background:#fff; background:rgba(255,255,255,.85); border-radius:0; -webkit-transition:all 0.3s cubic-bezier(1,0,0,1); transition:all 0.3s cubic-bezier(1,0,0,1); position: fixed; z-index: 8; top:0; right:0; bottom:0; left:0; transform-origin:0 0; transform:scale(0) rotateX(90deg); opacity:0; box-shadow:none;}
+.popup-content.open-top-right { transform-origin:50% 50%; top:0; bottom:0; border-radius:0; left:0; right:0;}
+.popup-content.open-top-left { transform-origin:50% 50%; top:0; bottom:0; border-radius:0; left:0; right:0;}
+.popup-content.open-bottom-left { transform-origin:50% 50%; top:0; bottom:0; border-radius:0; left:0; right:0;}
+
+.dragon.active a.dragon-btn { transform:rotate(225deg); -webkit-animation:none; animation:none;}
+.dragon.active .popup-content { transform:scale(1) rotateX(0deg); opacity: 1; -webkit-transition:all 0.6s cubic-bezier(1,0,0,1); transition:all 0.6s cubic-bezier(1,0,0,1); z-index: 31;}
+
+.dragon-bg { display: block; content:""; position: fixed; top:0; left:0; right:0; bottom:0; background:#000; background:rgba(0,0,0,.5); z-index: -1; cursor:pointer; transform:rotateX(90deg);}
+.dragon.active ~ .dragon-bg { transform:rotateX(0deg); z-index: 30;}
+
 }
